--- a/FPGA/spi_test.qsf
+++ b/FPGA/spi_test.qsf
@@ -44,8 +44,7 @@ set_global_assignment -name ORIGINAL_QUARTUS_VERSION 15.0.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:06:19  AUGUST 04, 2017"
 set_global_assignment -name LAST_QUARTUS_VERSION "20.1.1 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
-set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
-set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+set_global_assignment -name EDA_SIMULATION_TOOL "<None>"
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
@@ -104,6 +103,10 @@ set_location_assignment PIN_F13 -to DEBUG_PIN_1
 set_location_assignment PIN_T15 -to DEBUG_PIN_2
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to OPTOA
 set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to OPTOB
+set_global_assignment -name SYSTEMVERILOG_FILE test_input_reg.sv
+set_global_assignment -name SYSTEMVERILOG_FILE servo_control_unit.sv
+set_global_assignment -name SYSTEMVERILOG_FILE pmw_controller.sv
+set_global_assignment -name SYSTEMVERILOG_FILE angle_tracking_unit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE registerN.sv
 set_global_assignment -name VHDL_FILE ../lib/elec241.vhd
 set_global_assignment -name VHDL_FILE ../lib/spi_bhm.vhd
